--- a/introduction/function-parameter.html
+++ b/introduction/function-parameter.html
@@ -11,6 +11,8 @@
 <body>
   <h1>Function Parameter</h1>
 
+  <!-- jika ingin mengambil dari script -->
+  <!-- <script src="script/function-parameter-script.js"> -->
   <script>
     function nama() {
       nama = prompt("masukan nama anda!!")
