--- a/dom/daftar-tugas/index.html
+++ b/dom/daftar-tugas/index.html
@@ -14,6 +14,12 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
+  <style>
+    html {
+      background-color: rgb(78, 76, 76);
+    }
+  </style>
+
 </head>
 
 <body>
