menambahkan catatan kalkulator pinjaman, daftar tugas dan menambahkan select pada project oop

--- a/dom/daftar-tugas/index.html
+++ b/dom/daftar-tugas/index.html
@@ -15,9 +15,9 @@
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
   <style>
-    html {
+    /* html {
       background-color: rgb(78, 76, 76);
-    }
+    } */
   </style>
 
 </head>
